# friday

./: .env.example  README.md  config.py  index.html  llm.py  main.py  pyproject.toml  search.py  speech.py  transcribe.py  transcripts.json  tts.py
.github/: copilot-instructions.md
assets/: index-B-4H3y40.js
ui/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
ui-dist/: index.html
ui-dist/assets/: index-DwGAX7n0.css
ui/src/: App.tsx  index.css  types.ts
ui/src/components/: ChatFeed.tsx  Footer.tsx  Header.tsx  MessageGroup.tsx  PromptButtons.tsx  StatusRows.tsx  WaveformStrip.tsx
ui/src/hooks/: useMicVisualizer.ts  usePolling.ts
