[project]
name = "fast-whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.2.1",
    "kokoro>=0.9.4",
    "numpy>=2.4.4",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "python-dotenv>=1.0.0",
]
